test: 1:1 integration-test parity for SQL-free TableService path
Port every quidem CREATE/DROP TABLE script into a mirrored TableService
integration test so the direct (SQL-free) create path is verified against a
live cluster the same way DDL is. Each store's tests group create/update/drop
per table into one lifecycle test, verify registration via catalog resolve
after create, and keep independent error checks (missing key/value fields,
unknown database) as separate tests.

- Add shared CatalogResolver test fixture (resolveRowType/awaitResolved).
- Kafka/MySQL/Venice/K8s: rewritten lifecycle + separated error tests.
- Logical: online (dry-run + error + real-deploy pipeline verification) and
  new offline test (paused TableTrigger). Online tier row types are not
  resolved (Kafka-nearline backed, no local schema registry).
- deploy/docker/venice: disable Venice's 6h store-recreation cooldown locally
  (controller.store.recreation.after.deletion.time.window.seconds=0) so
  create+delete store tests are re-runnable, by appending the override to the
  controller's baked-in properties at container startup.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>